Issue #10203: sqlite3.Row now truly supports sequence protocol.  In particular it supports reverse() and negative indices.  Original patch by Claudiu Popa.